<resources>
    <string name="app_name">MyClipboardTransferHelper</string>
    <string name="welcome">Welcome！！</string>
    <string name="imsender">I\'m Sender</string>
    <string name="imreceiver">I\'m Receiver</string>
    <string name="closeapp">Close App</string>
    <string name="welcome_receiver">Welcome,receiver!!</string>
    <string name="startListen">Start Listen</string>
    <string name="resultWillHere">The results will be here</string>
    <string name="startFailed">Start failed!! %s</string>
    <string name="stopListen">Stop Listen</string>
    <string name="receiverStarted">Please connect at %s\nThe SHA256 fingerprint of the current device is: %s\n\n</string>
    <string name="receiverStopped">Stopped!! You cannot connect now</string>
    <string name="receiverReceived">Received %d bytes!!\n</string>
    <string name="welcome_sender">Welcome,sender!!</string>
    <string name="ip">IP</string>
    <string name="Port">Port</string>
    <string name="Connect">Connect</string>
    <string name="senderTip">Paste or input any text here!</string>
    <string name="debounceTime">Debounce time (ms)</string>
    <string name="connecting">Connecting…</string>
    <string name="one_hundred">100</string>
    <string name="invalid_ip_port">Enter IP and port please</string>
    <string name="invalid_port">The port is not valid</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect_failed">"Cannot connect!! "</string>
    <string name="connect">Connect</string>
    <string name="send_failed">Send failed!! %s</string>
    <string name="auth">Auth</string>
    <string name="set_connect_password">Set connect password here</string>
    <string name="need_confirm">Need confirm</string>
    <string name="clientAttemptConnect_Title">A client is attempting to connect!!!</string>
    <string name="clientAttemptConnect_contentInfo">The client\'s IP Address is: %s\nThe client connection port is: %d</string>
    <string name="clientAttemptConnect_Accept">Accept</string>
    <string name="clientAttemptConnect_doYou">Do you accept this connection??</string>
    <string name="clientAttemptConnect_NoAccept">Refuse</string>
    <string name="oneKeyPaste">OneKeyPaste</string>
    <string name="connect_first">Please connect and authenticate first.</string>
    <string name="known_host_new_title">Unknown Host</string>
    <string name="known_host_new_message">The authenticity of host %s can\'t be established.\nCertificate SHA256 fingerprint: %s\nAre you sure you want to continue connecting?</string>
    <string name="known_host_changed_title">Host Key Changed!</string>
    <string name="known_host_changed_message">The host key for %s has changed!\nExpected: %s\nGot: %s\nSomeone could be eavesdropping (man-in-the-middle attack)!\nAre you sure you want to continue?</string>
    <string name="password_required_title">Password Required</string>
    <string name="password_required_first">The receiver has set a password for authentication. Please enter the password.</string>
    <string name="password_required_retry">The password you entered is not correct. Please try again.</string>
    <string name="password_hint">Password</string>
    <string name="authenticating">Authenticating…</string>
    <string name="connection_rejected">Connection rejected by receiver.</string>
    <string name="connection_closed">Connection closed.</string>
    <string name="connection_closed_by_peer">Connection closed by peer.</string>
    <string name="connection_refused">Connection refused.</string>
    <string name="connection_timed_out">Connection timed out.</string>
    <string name="connection_error">Connection error: %s</string>
    <string name="auth_success">Authentication successful.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="client_connected">Client connected: %s:%d\n</string>
    <string name="client_disconnected">Client %s:%d disconnected\n</string>
    <string name="receiverReceivedFrom">Received %d bytes from %s:%d\n</string>
    <string name="manageKnownHosts">Manage Known Hosts</string>
    <string name="settings">Settings</string>
    <string name="regenerate_cert">Regenerate Certificate</string>
    <string name="open_project_page">Project Homepage</string>
    <string name="project_homepage_url">https://github.com/s7prods/MyClipboardTransferHelper</string>
    <string name="known_hosts_title">Known Hosts</string>
    <string name="add_host">Add Host</string>
    <string name="edit_host">Edit Host</string>
    <string name="delete_host">Delete</string>
    <string name="no_known_hosts">No known hosts</string>
    <string name="host_ip_hint">IP Address</string>
    <string name="host_fingerprint_hint">SHA256 Fingerprint</string>
    <string name="delete_host_confirm">Delete %s?</string>
    <string name="invalid_host_entry">IP and fingerprint required</string>
    <string name="regen_cert_title">Regenerate Certificate?</string>
    <string name="regen_cert_message">This deletes the current certificate and private key. Existing sender connections will see a host-key-changed warning. Continue?</string>
    <string name="cert_regenerated">Certificate regenerated</string>
    <string name="cert_regen_failed">Regeneration failed: %s</string>
    <string name="no_browser">No browser found</string>
    <string name="known_host_added">Permanently added %s to the list of known hosts.</string>
    <string name="known_host_updated">Warning: Permanently updated %s in the list of known hosts.</string>
    <string name="save_files_to">Save files to:</string>
    <string name="title_activity_internal_received_files_management">InternalReceivedFilesManagementActivity</string>
    <string name="action_settings">Settings</string>
    <string name="send_picture">Send picture</string>
    <string name="send_files">Send files</string>
    <string name="manage_received_files">Manage received internal files</string>
    <string name="manage_received_files_tip">Tip: You can scroll here!!!\nTip: Only files saved under "Internal data directory" mode can be managed here. Use a file manager for files in the Download directory.\nTip: Long press to delete an item.\nTip: You can use Android Documents to manage these files. Check your OS battery optimization and background limits settings if entries are not visible.</string>
    <string name="received_file">Received file %s (%d bytes) from %s:%d\n</string>
    <string name="file_open_failed">Cannot open file</string>
    <string name="delete_file_confirm">Delete %s?</string>
    <string name="select_file_failed">Failed to read selected file</string>
    <string name="no_files">No received files</string>
    <string name="delete_all_files">Delete all received files</string>
    <string name="delete_all_files_confirm">Delete all received files?</string>
    <string name="sending_files">Sending files…</string>
    <string name="sending_file_progress">Sending %1$s (%2$s / %3$s)</string>
    <string name="cancel">Cancel</string>
    <string name="transfer_cancelled">Transfer cancelled</string>
    <string name="transfer_complete">Transfer complete</string>
    <string name="transfer_failed">Transfer failed: %s</string>
    <string name="provider_transferred_files">app.MyApp.MyClipboardTransferHelper.shared.contentProviderOpenFile</string>
    <string name="notification_permission_title">Stay Connected</string>
    <string name="notification_permission_message">A notification will show while the connection is active to prevent disconnections when switching apps. If you allow notifications, your experience will be better.</string>
    <string name="keepalive_channel_name">Connected</string>
    <string name="keepalive_channel_desc">A connection is active</string>
    <string name="keepalive_notification_text">Connection active</string>
    <string name="open_in_documents">Open in Documents</string>
    <string name="documentsui_not_found">Documents app not available</string>
    <string name="zero_number">0</string>
    <string name="access_local_network_prompt_dialog_title">Access Local Network</string>
    <string name="access_local_network_prompt_dialog_content">As a local data transfer tool, the application needs the permission to access your local network so that you can connect to another device and send your data. If you don\'t allow this permission, the application can still work, but you\'ll be unable to connect to another device in your local network.\nDo you want to grant this permission now?</string>
    <string name="access_local_network_denied_toast_content">You\'d disallowed the application to access your local network. Some connection might fail.</string>
</resources>